--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -204,3 +204,31 @@ blockquote {
 table, th, td {
   border: 1px solid #444;
 }
+
+button, .button {
+  background-color: #01ff70;
+  border: 0;
+  color: #222;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: .5rem 1rem;
+  font-family: inherit;
+  font-weight: bold;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.button:visited {
+  color: #222;
+}
+
+.button:hover {
+  background-color: #444;
+  color: white;
+  box-shadow: 5px 5px 0 #000;
+}
+
+.button:active {
+  background-color: #222;
+  color: #01ff70;
+}
