--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,4 +1,19 @@
+:root {
+  --fc-border-color: #444; /* fullcalendar */
+  --fc-today-bg-color: #444;
 
+  --fc-neutral-bg-color: #444;
+
+  --fc-button-bg-color: #01ff70;
+  --fc-button-text-color: black;
+  --fc-button-border-color: #01ff70;
+  --fc-button-hover-bg-color: #444;
+  --fc-button-hover-text-color: white;
+  --fc-button-active-bg-color: #222;
+  --fc-button-active-text-color: #01ff70;
+
+  --fc-list-event-hover-bg-color: #444;
+}
 
 pre,
 code {
@@ -6,7 +21,7 @@ code {
 }
 
 pre {
-  padding: .5rem;
+  padding: 0.5rem;
   line-height: 1.25;
   overflow-x: scroll;
 }
@@ -120,7 +135,7 @@ h3,
 .retro-h3,
 h4,
 .retro-h4 {
-  margin: 1.414rem 0 .5rem;
+  margin: 1.414rem 0 0.5rem;
   font-weight: inherit;
   line-height: 1.42;
 }
@@ -153,12 +168,12 @@ h5,
 
 h6,
 .retro-h6 {
-  font-size: .88rem;
+  font-size: 0.88rem;
 }
 
 small,
 .retro-small {
-  font-size: .707em;
+  font-size: 0.707em;
 }
 
 /* https://github.com/mrmrs/fluidity */
@@ -189,7 +204,7 @@ body {
   line-height: 1.45;
   margin: 6rem auto 1rem;
   max-width: 48rem;
-  padding: .25rem;
+  padding: 0.25rem;
 }
 
 pre {
@@ -201,17 +216,20 @@ blockquote {
   padding-left: 1rem;
 }
 
-table, th, td {
+table,
+th,
+td {
   border: 1px solid #444;
 }
 
-button, .button {
+button,
+.button {
   background-color: #01ff70;
   border: 0;
   color: #222;
   cursor: pointer;
   font-size: 1rem;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   font-family: inherit;
   font-weight: bold;
   text-decoration: none;
@@ -234,5 +252,45 @@ button, .button {
 }
 
 li:not(:last-child) {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
+}
+
+.tippy-box[data-theme~="myTheme"] {
+  background-color: black;
+  color: white;
+  border: 1px solid #01ff70;
+}
+
+.fc-button {
+  border-radius: 0 !important;
+  z-index: 1;
+}
+
+.fc-button:hover:not(:disabled) {
+  color: white !important;
+}
+
+.fc-button-group:hover {
+  box-shadow: 5px 5px 0 #000;
+}
+
+.fc-button:focus {
+  box-shadow: 5px 5px 0 #000 !important;
+}
+
+.fc-button-active {
+  background-color: #222 !important;
+  color: #01ff70 !important;
+  box-shadow: 5px 5px 0 #000;
+  z-index: -10;
+  position: relative;
+}
+
+.fc-daygrid-event {
+  border-radius: 0 !important;
+}
+
+.fc-daygrid-event:hover {
+  background-color: black !important;
+  border-color: black !important;
 }
