--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -2,6 +2,8 @@
   --fc-border-color: #444; /* fullcalendar */
   --fc-today-bg-color: #444;
 
+  --fc-page-bg-color: #222;
+
   --fc-neutral-bg-color: #444;
 
   --fc-button-bg-color: #01ff70;
