--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -6,261 +6,43 @@
 
   --fc-neutral-bg-color: #444;
 
-  --fc-button-bg-color: #01ff70;
+  --fc-button-bg-color: var(--pico-primary);
   --fc-button-text-color: black;
-  --fc-button-border-color: #01ff70;
+  --fc-button-border-color: var(--pico-primary);
   --fc-button-hover-bg-color: #444;
   --fc-button-hover-text-color: white;
   --fc-button-active-bg-color: #222;
-  --fc-button-active-text-color: #01ff70;
+  --fc-button-active-text-color: var(--pico-primary);
 
   --fc-list-event-hover-bg-color: #444;
 }
 
-pre,
-code {
-  font-family: Menlo, Monaco, "Courier New", monospace;
-}
-
-pre {
-  padding: 0.5rem;
-  line-height: 1.25;
-  overflow-x: scroll;
-}
-
-@media print {
-  *,
-  *:before,
-  *:after {
-    background: transparent !important;
-    color: #000 !important;
-    box-shadow: none !important;
-    text-shadow: none !important;
-  }
-
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
-
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
-
-  abbr[title]:after {
-    content: " (" attr(title) ")";
-  }
-
-  a[href^="#"]:after,
-  a[href^="javascript:"]:after {
-    content: "";
-  }
-
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
-
-  thead {
-    display: table-header-group;
-  }
-
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
-
-  img {
-    max-width: 100% !important;
-  }
-
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
-
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
-}
-
-a,
-a:visited {
-  color: #01ff70;
-}
-
-a:hover,
-a:focus,
-a:active {
-  color: #2ecc40;
-}
-
-.retro-no-decoration {
-  text-decoration: none;
-}
-
-html {
-  font-size: 12px;
-}
-
-@media screen and (min-width: 32rem) and (max-width: 48rem) {
-  html {
-    font-size: 15px;
-  }
-}
-
-@media screen and (min-width: 48rem) {
-  html {
-    font-size: 16px;
-  }
-}
-
 body {
-  line-height: 1.85;
-}
-
-p,
-.retro-p {
-  font-size: 1rem;
-  margin-bottom: 1.3rem;
-}
-
-h1,
-.retro-h1,
-h2,
-.retro-h2,
-h3,
-.retro-h3,
-h4,
-.retro-h4 {
-  margin: 1.414rem 0 0.5rem;
-  font-weight: inherit;
-  line-height: 1.42;
-}
-
-h1,
-.retro-h1 {
-  margin-top: 0;
-  font-size: 3.998rem;
-}
-
-h2,
-.retro-h2 {
-  font-size: 2.827rem;
-}
-
-h3,
-.retro-h3 {
-  font-size: 1.999rem;
-}
-
-h4,
-.retro-h4 {
-  font-size: 1.414rem;
-}
-
-h5,
-.retro-h5 {
-  font-size: 1.121rem;
-}
-
-h6,
-.retro-h6 {
-  font-size: 0.88rem;
-}
-
-small,
-.retro-small {
-  font-size: 0.707em;
-}
-
-/* https://github.com/mrmrs/fluidity */
-
-img,
-canvas,
-iframe,
-video,
-svg,
-select,
-textarea {
-  max-width: 100%;
-}
-
-html,
-body {
-  background-color: #222;
-  min-height: 100%;
-}
-
-html {
-  font-size: 18px;
-}
-
-body {
-  color: #fafafa;
-  font-family: "Courier New";
-  line-height: 1.45;
-  margin: 6rem auto 1rem;
-  max-width: 48rem;
-  padding: 0.25rem;
-}
-
-pre {
-  background-color: #333;
-}
-
-blockquote {
-  border-left: 3px solid #01ff70;
-  padding-left: 1rem;
-}
-
-table,
-th,
-td {
-  border: 1px solid #444;
-}
-
-button,
-.button {
-  background-color: #01ff70;
-  border: 0;
-  color: #222;
-  cursor: pointer;
-  font-size: 1rem;
-  padding: 0.5rem 1rem;
-  font-family: inherit;
-  font-weight: bold;
-  text-decoration: none;
-  display: inline-block;
-}
-
-.button:visited {
-  color: #222;
-}
-
-.button:hover {
-  background-color: #444;
-  color: white;
-  box-shadow: 5px 5px 0 #000;
-}
-
-.button:active {
-  background-color: #222;
-  color: #01ff70;
+  padding: 3em;
 }
 
 li:not(:last-child) {
   margin-bottom: 0.5rem;
 }
 
+.button {
+  background-color: var(--pico-primary);
+  color: var(--pico-contrast-inverse);
+  padding: 5px 10px;
+  border-radius: 2px;
+  text-decoration: none;
+}
+
 .tippy-box[data-theme~="myTheme"] {
+  padding: 0.5rem;
   background-color: black;
   color: white;
-  border: 1px solid #01ff70;
+  border: 1px solid var(--pico-primary);
+  border-radius: 5px;
+}
+
+#calendar {
+  padding-top: 1rem;
 }
 
 .fc-button {
@@ -282,17 +64,20 @@ li:not(:last-child) {
 
 .fc-button-active {
   background-color: #222 !important;
-  color: #01ff70 !important;
+  color: var(--pico-primary) !important;
   box-shadow: 5px 5px 0 #000;
   z-index: -10;
   position: relative;
 }
 
-.fc-daygrid-event {
-  border-radius: 0 !important;
-}
-
 .fc-daygrid-event:hover {
   background-color: black !important;
   border-color: black !important;
+}
+
+@media (width <= 768px) {
+  #calendar {
+    margin-left: -2rem;
+    margin-right: -2rem;
+  }
 }
